<resources>
    <string name="app_name">Conciertos</string>

    <string name="codigo">Código</string>
    <string name="capacidad">Capacidad máxima</string>
    <string name="concierto">Concierto</string>
    <string name="fecha">Fecha</string>

    <string name="generos">Género Musical</string>
    <string name="genBa">Banda</string>
    <string name="genPop">Popular</string>
    <string name="genRo">Rock</string>

    <string name="auditorio">Auditorio</string>

    <string-array name="listaCapacidad">
        <item>1 000</item>
        <item>2 000</item>
        <item>3 000</item>
        <item>5 000</item>
        <item>8 000</item>
    </string-array>

    <string name="agregar">Agregar</string>
    <string name="limpiar">Limpiar</string>
    <string name="buscar">Buscar</string>
    <string name="regresar">Regresar</string>
    <string name="eliminar">Eliminar</string>

    <string name="datos">Información registrada</string>
</resources>