<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:background="@color/dusty"
    tools:context=".DetalleConciertoActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAllCaps="false"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        android:lines="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/txtDatos"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:text="@string/datos"
        android:textAllCaps="false"
        android:textColor="@color/dusty"
        android:textSize="16sp"
        android:background="@color/purple_dark"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <ImageButton
        android:id="@+id/ibtnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purple_dark"
        android:text="@string/regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDatos"
        app:srcCompat="@drawable/baseline_keyboard_return_24"
        app:tint="@color/dusty" />

</androidx.constraintlayout.widget.ConstraintLayout>